fixed scrollbar and loading symbol

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ html {
 body {
 	font-family: "Inter", sans-serif;
 	color: white;
+	overflow: hidden;
 }
 
 button:hover, a:hover {
