--- a/src/app.module.css
+++ b/src/app.module.css
@@ -3,3 +3,8 @@
 	display: flex;
 	flex-direction: column;
 }
+
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+}
