--- a/src/pages/searchresult/searchresult.css
+++ b/src/pages/searchresult/searchresult.css
@@ -132,7 +132,7 @@
 }
 
 .search_button{
-	padding: 10px 16px;
+	width: 6rem;
 	background-color: #2c6aa0;
 	color: white;
 	border: none;
@@ -439,6 +439,22 @@
 .popup_done_btn:hover {
 	background: #2c4786;
 	transform: translateY(-1px);
+}
+
+.spinner {
+  width: 16px;
+  border: 4px solid #ccc;
+  border-top: 4px solid #333;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: auto;
+  color: white;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 @media (max-width: 600px) {
